log
Thu 12 Oct 2023 06:25:51 PM UTC: 
 tests:  0|4
total_score: 0/70
c019b9b
Thu 12 Oct 2023 06:28:07 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:9: error: unused variable ‘monticulo’ [-Werror=unused-variable]
   36 |   Heap* monticulo = (Heap*)malloc(sizeof(Heap));
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6b5975f
Thu 12 Oct 2023 06:28:37 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
41738dd
Thu 12 Oct 2023 06:28:50 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
d6c5368
Thu 12 Oct 2023 06:29:19 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
8b057ea
Thu 12 Oct 2023 06:29:52 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:23: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   43 |   monticulo->heapArray=(int*)malloc(sizeof(int));
      |                       ^
cc1: all warnings being treated as errors
Compilation failed
21a7bcd
Thu 12 Oct 2023 06:30:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:37: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
   43 |   monticulo->heapArray=(int*)malloc(heap->capac*sizeof(int));
      |                                     ^~~~
      |                                     Heap
heap.c:43:37: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
10898d4
Thu 12 Oct 2023 06:30:49 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:37: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
   43 |   monticulo->heapArray=(int*)malloc(heap->capac*sizeof(int));
      |                                     ^~~~
      |                                     Heap
heap.c:43:37: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ec0ad4f
Thu 12 Oct 2023 06:31:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:37: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
   43 |   monticulo->heapArray=(int*)malloc(heap->capac*sizeof(int));
      |                                     ^~~~
      |                                     Heap
heap.c:43:37: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6350f93
Thu 12 Oct 2023 06:31:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:23: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   43 |   monticulo->heapArray=(int*)malloc(monticulo->capac*sizeof(int));
      |                       ^
cc1: all warnings being treated as errors
Compilation failed
b24903a
Thu 12 Oct 2023 06:32:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:37: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
   43 |   monticulo->heapArray=(int*)malloc(heap->capac*sizeof(int));
      |                                     ^~~~
      |                                     Heap
heap.c:43:37: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
52230b7
Thu 12 Oct 2023 06:32:24 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:23: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   43 |   monticulo->heapArray=(int*)malloc(monticulo->capac*sizeof(int));
      |                       ^
cc1: all warnings being treated as errors
Compilation failed
5632541
Thu 12 Oct 2023 06:33:38 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
30f729e
Thu 12 Oct 2023 06:35:33 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
5b550b0
Thu 12 Oct 2023 06:36:17 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|2
total_score: 20/70
0425c8f
Thu 12 Oct 2023 06:37:51 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|2
total_score: 20/70
a012c8a
Thu 12 Oct 2023 06:39:29 PM UTC: 
 heap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
81e3dd4
Thu 12 Oct 2023 06:40:26 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:46:3: error: implicit declaration of function ‘siftUp’ [-Werror=implicit-function-declaration]
   46 |   siftUp(pq,pq->size-1);
      |   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
cb199f9
Thu 12 Oct 2023 06:42:02 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
4617c1e
Thu 12 Oct 2023 08:03:57 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:49:14: error: unused variable ‘temp’ [-Werror=unused-variable]
   49 |     heapElem temp = pq->heapArray[indice];
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
4365185
